# LessCharacterLanguage

./: README.md  desktop.ini
DOCS/: why.md  (+1 more)
lclComp_0_0_2/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CppProperties.json  Makefile  build.ninja  cmake_install.cmake  cmp  compile.json  exc  exe  mk
lclComp_0_0_2/code/: helper.cpp  helper.hpp  limits.hpp  main.cpp  nullable.cpp  nullable.hpp.gch  print.cpp  print.hpp
lclComp_0_0_2/code/libs/: betterJSON.cpp  betterJSON.h  json.h
lclComp_0_0_2/code/simplyfy/: classify.cpp  classify.hpp  keywords.cpp  keywords.hpp  particleLine.hpp  simply.cpp  simply.hpp  simplyJson.cpp  simplyJson.hpp
lclComp_0_0_2/code/tokenise/: InnerVRE.cpp  InnerVRE.h  buildtree.cpp  buildtree.hpp  genericdt.cpp  genericdt.hpp  inheritor.cpp  inheritor.hpp  iterator.cpp  iterator.hpp  prebuilder.cpp  prebuilder.hpp  subexecutor.cpp  subexecutor.hpp  tokenjson.cpp  tokenjson.hpp
lclComp_0_0_2/code/translation/: lcx.cpp  lcx.hpp
lclComp_0_0_2/legacy/: a.out  comp  exe  run
lclComp_0_0_2/space/: TODO  x.txt  xml.csv
lclComp_0_0_2/space/code20230510/: keywords.cpp  keywords.hpp  main.cpp  simply.cpp  simply.hpp
lclComp_0_0_2/space/code20230620/: helper.cpp  helper.hpp  keywords.cpp  keywords.hpp  main.cpp  nullable.hpp  nullable.hpp.gch  simply.cpp  simply.hpp
lclComp_0_0_2/space/lcl/: fraction.lcl  math.lcl
lclComp_0_0_2/space/spC/: helper.hcp
lclComp_0_0_2/test/: exc
lclComp_0_0_2/test/code/: Untitled-1.json  test.lccompile  test.lcl  test.lcx  test.lcx.json  test2.lcl  testq.lcl
lclComp_0_0_2/todo/: buglist.txt
(+65 files in other folders)
